--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+html {
+    scroll-behavior: smooth;
+    scroll-padding: 10rem;
+}
+
 section p{
     font-family: 'Swis721 BT', sans-serif;
     font-weight: 600;
@@ -34,10 +39,10 @@ nav li {
 
 #inicio {
     padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 #produtos {
-    padding-top: 106px;
     margin-bottom: 5vh;
 }
 
@@ -64,4 +69,21 @@ footer {
     text-align: center;
     padding: 24px;
     border-bottom: 3px solid #d75413 ;
+}
+
+.navbar-toggler {
+    border: none;
+    color:#d75413;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px){
+    .container {
+        max-width: 90%;
+    }
+
+    .text-inicio {
+        padding-top: 8px;
+    }
+
+    
 }
